--- a/main.html
+++ b/main.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<ul>
+	<li>
+<img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+<map name="workmap">
+  <area shape="rect" coords="34,44,270,350" alt="Computer" href="https://en.wikipedia.org/wiki/Golden_Retriever">
+</map>
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Workplace" usemap="#dogmap" width="400" height="379">
+
+<map name="dogmap">
+  <area shape="rect" coords="34,44,270,350" alt="Computer" href="Full_attention_%288067543690%29.jpg	https://en.wikipedia.org/wiki/Poodle">
+</map>
+	</li>
+</ul>
+
 
 </body>
-
 </html>
+
