--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 
 <ul>
 	<li>
-<img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+<a><img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
 
 <map name="workmap">
   <area shape="rect" coords="34,44,270,350" alt="golddog" href="https://en.wikipedia.org/wiki/Golden_Retriever">
@@ -15,6 +15,7 @@
 <map name="dogmap">
   <area shape="rect" coords="34,44,270,350" alt="blackdog" href="https://en.wikipedia.org/wiki/Poodle">
 </map>
+</a>
 	</li>
 </ul>
 
