--- a/main.html
+++ b/main.html
@@ -4,18 +4,18 @@
 
 <ul>
 	<li>
-<a><img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+<a><img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379"></a>
 
 <map name="workmap">
-  <area shape="rect" coords="34,44,270,350" alt="golddog" href="https://en.wikipedia.org/wiki/Golden_Retriever">
+ <area shape="rect" coords="34,44,270,350" alt="golddog" href="https://en.wikipedia.org/wiki/Golden_Retriever">
 </map>
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Workplace" usemap="#dogmap" width="400" height="379">
+<a><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Workplace" usemap="#dogmap" width="400" height="379"></a>
 
 <map name="dogmap">
   <area shape="rect" coords="34,44,270,350" alt="blackdog" href="https://en.wikipedia.org/wiki/Poodle">
 </map>
-</a>
+
 	</li>
 </ul>
 
