--- a/main.html
+++ b/main.html
@@ -4,16 +4,16 @@
 
 <ul>
 	<li>
-<a<img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">></a>
+<img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Golden_Retriever_Dukedestiny01_drvd.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
 
 <map name="workmap">
- <a<area shape="rect" coords="34,44,270,350" alt="golddog" href="https://en.wikipedia.org/wiki/Golden_Retriever">></a>
+ <area shape="rect" coords="34,44,270,350" alt="golddog" <a href="https://en.wikipedia.org/wiki/Golden_Retriever"></a>>
 </map>
 
-<a<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Workplace" usemap="#dogmap" width="400" height="379">></a>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Workplace" usemap="#dogmap" width="400" height="379">
 
 <map name="dogmap">
-  <a<area shape="rect" coords="34,44,270,350" alt="blackdog" href="https://en.wikipedia.org/wiki/Poodle">></a>
+  <area shape="rect" coords="34,44,270,350" alt="blackdog" href="https://en.wikipedia.org/wiki/Poodle">
 </map>
 
 	</li>
