--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Workplace" usemap="#dogmap" width="400" height="379">
 
 <map name="dogmap">
-  <area shape="rect" coords="34,44,270,350" alt="blackdog" href="https://en.wikipedia.org/wiki/Poodle">
+  <area shape="rect" coords="34,44,270,350" alt="blackdog"  <a href="https://en.wikipedia.org/wiki/Poodle"></a>>
 </map>
 
 	</li>
